Finished with first attempt at implementing payments, periodicPayments and transactions.
Few successful integration tests.

Created foundation for unit testing.

BankingCore compiles with all tests!
