# banking-core/src/main/java/com/alphbank/core/payment/service/repository/model/PaymentEntity.java
@@ -2,6 +2,7 @@ package com.alphbank.core.payment.service.repository.model;
 
 import com.alphbank.commons.impl.Utils;
 import com.alphbank.core.payment.service.model.Payment;
+import jakarta.validation.constraints.NotNull;
 import lombok.Builder;
 import lombok.Data;
 import lombok.With;
@@ -37,6 +38,9 @@ public class PaymentEntity {
     @Column("recipient_iban")
     private String recipientIban;
 
+    @Column("recipient_name")
+    private String recipientName;
+
     @Column("recipient_account_id")
     private UUID recipientAccountId;
 
@@ -60,6 +64,8 @@ public class PaymentEntity {
                 .messageToSelf(payment.getMessageToSelf())
                 .messageToRecipient(payment.getMessageToRecipient())
                 .recipientIban(payment.getRecipientIban())
+                .recipientAccountId(payment.getRecipientAccountId())
+                .recipientName(payment.getRecipientName())
                 .monetaryValue(Utils.getAmount(payment.getAmount()))
                 .currency(Utils.getCurrencyCode(payment.getAmount()))
                 .scheduledDateTime(payment.getScheduledDateTime())
@@ -67,4 +73,18 @@ public class PaymentEntity {
     }
 
 
+    public static PaymentEntity createFrom(PeriodicPaymentEntity periodicPaymentEntity, LocalDateTime scheduledDateTime) {
+        return PaymentEntity.builder()
+                .fromAccountId(periodicPaymentEntity.getFromAccountId())
+                .periodicPaymentId(periodicPaymentEntity.getId())
+                .messageToSelf(periodicPaymentEntity.getMessageToSelf())
+                .messageToRecipient(periodicPaymentEntity.getMessageToRecipient())
+                .recipientIban(periodicPaymentEntity.getRecipientIban())
+                .recipientAccountId(periodicPaymentEntity.getRecipientAccountId())
+                .recipientName(periodicPaymentEntity.getRecipientName())
+                .monetaryValue(periodicPaymentEntity.getMonetaryValue())
+                .currency(periodicPaymentEntity.getCurrency())
+                .scheduledDateTime(scheduledDateTime)
+                .build();
+    }
 }
